<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:layout_gravity="center"
    tools:context=".Menu">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:padding="30dp">
        <!-- Text La meva puntuació -->
        <TextView
            android:id="@+id/miPuntuaciotxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/miPuntuaciotxt"
            android:textColor="@color/white"
            android:textSize="30sp" />
        <!-- contingut puntuació -->
        <TextView
            android:id="@+id/puntuacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/puntuacio"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:gravity="center"/>
        <!-- Imatge alien -->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:id="@+id/logo1"
            android:src="@drawable/logoconborde" />
        <!-- uid -->
        <!-- nom -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nom"
            android:text="@string/nom"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:gravity="center"/>
        <!-- correu -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/correo"
            android:text="@string/correo"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_marginBottom="35dp"
            android:gravity="center"/>

        <!-- BOTO DE jugar -->
        <Button
            android:id="@+id/jugarBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/botopropi"
            android:padding="15dp"
            android:text="@string/jugarBtn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <!-- BOTO DE puntuacions -->
        <Button
            android:id="@+id/PuntuacionsBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/botopropi"
            android:padding="15dp"
            android:text="@string/PuntuacionsBtn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <!-- BOTO DE Credits -->
        <Button
            android:id="@+id/CreditsBtn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/botopropi"
            android:padding="15dp"
            android:text="@string/CreditsBtn"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <!-- BOTO DE Tancar sessió -->
        <Button
            android:id="@+id/tancarSessio"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/botopropi"
            android:padding="15dp"
            android:text="@string/TancarSessio"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>